fixed portfolio spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,12 +33,17 @@ p {
     color: rgb(182, 121, 22);
 }
 
+
+
 .col-md-4 {
+    
     padding-top: 25px;
-    padding-left: 25px;
-    padding-right: 25pc;
     padding-bottom: 25px;
-}
+    padding-left: 25px;
+    padding-right: 25px;
+    margin-left: 25px;
+    margin-right: 25px;
+}  
 
 .contact {
     margin-left: 100px;
